# stugna-it

./: .gitignore  README.md  ammo.h  config.json  httpserver.h  index.html  jobs.cpp  main.cpp  multigun.cpp  multigun.h  proxy.cpp  stats.h  uaheaders.cpp  uaheaders.h  utils.cpp
builds/: stugna-it-alpine
doc/: README.md  runWin64.md
src/: CMakeLists.txt  ammo.cpp  config.docker.json  config.json  gun.cpp  gun.h  httpserver.cpp  httpserver.h  index.html  job.cpp  job.h  jobs.cpp  jobs.h  main.cpp  multigun.cpp  multigun.h  proxy.cpp  proxy.h  stats.cpp  uaheaders.cpp  uaheaders.h  utils.cpp  utils.h
utils/: randProxy.php
